--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "env-var": "^7.2.0",
     "next": "latest",
     "next-auth": "^4.10.3",
     "next-themes": "^0.2.0",
