--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.1",
     "env-var": "^7.2.0",
     "next": "latest",
     "next-auth": "^4.10.3",
@@ -19,6 +21,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
