--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "argon2": "^0.29.1",
     "env-var": "^7.2.0",
     "next": "latest",
     "next-auth": "^4.10.3",
